<resources>
    <string name="app_name">SnowCast</string>
    <string name="pref_header_data_sync">Datenquellen</string>
    <string name="pref_title_idx1">Ortsindex 1</string>
    <string name="pref_title_idx2">Ortsindex 2</string>
    <string name="pref_title_idx3">Ortsindex 3</string>
    <string name="pref_title_idx4">Ortsindex 4</string>
    <string name="pref_title_idx5">Ortsindex 5</string>
    <string name="pref_default_idx1">2860684-oberforstbach</string>
    <string name="pref_default_idx2">2934486-dueren</string>
    <string name="pref_default_idx3">2949235-biebrich</string>
    <string name="pref_default_idx4">2959771-abtsdorf</string>
    <string name="pref_default_idx5" />
    <string name="data_fetch">"\nWetterdaten werden abgerufen%1$s"</string>
    <string name="dots01">"&#8200;&#8200;&#8200;"</string>
    <string name="dots02">"&#46;&#8200;&#8200;"</string>
    <string name="dots03">"&#46;&#46;&#8200;"</string>
    <string name="dots04">"&#46;&#46;&#46;"</string>
    <string name="dots05">"&#8200;&#46;&#46;"</string>
    <string name="dots06">"&#8200;&#8200;&#46;"</string>
    <string name="dots07">"&#8200;&#8200;&#8200;"</string>
    <string name="dots08">"&#8200;&#8200;&#46;"</string>
    <string name="dots09">"&#8200;&#46;&#46;"</string>
    <string name="dots10">"&#46;&#46;&#46;"</string>
    <string name="dots11">"&#46;&#46;&#8200;"</string>
    <string name="dots12">"&#46;&#8200;&#8200;"</string>
    <string name="data_fetch_err">"\nWetterdienst nicht erreichbar.\nBitte versuchen Sie es später erneut."</string>
    <string name="bft_0">Windstille</string>
    <string name="bft_1">leisem Zug</string>
    <string name="bft_2">leichter Brise</string>
    <string name="bft_3">schwacher Brise</string>
    <string name="bft_4">mäßiger Brise</string>
    <string name="bft_5">frischer Brise</string>
    <string name="bft_6">starkem Wind</string>
    <string name="bft_7">steifem Wind</string>
    <string name="bft_8">stürmischem Wind</string>
    <string name="bft_9">Sturm</string>
    <string name="bft_10">schwerem Sturm</string>
    <string name="bft_11">orkanartigem Sturm</string>
    <string name="bft_12">Orkan</string>
    <string name="bft_unknown">Wind</string>
    <string name="bft_range">%1$s bis %2$s</string>
    <string name="wdir_n">N</string>
    <string name="wdir_nne">NNO</string>
    <string name="wdir_ne">NO</string>
    <string name="wdir_ene">ONO</string>
    <string name="wdir_e">O</string>
    <string name="wdir_ese">OSO</string>
    <string name="wdir_se">SO</string>
    <string name="wdir_sse">SSO</string>
    <string name="wdir_s">S</string>
    <string name="wdir_ssw">SSW</string>
    <string name="wdir_sw">SW</string>
    <string name="wdir_wsw">WSW</string>
    <string name="wdir_w">W</string>
    <string name="wdir_wnw">WNW</string>
    <string name="wdir_nw">NW</string>
    <string name="wdir_nnw">NNW</string>
    <!--
    <string name="wdir_n">Richtung Nord</string>
    <string name="wdir_nne">Richtung Nord-Nordost</string>
    <string name="wdir_ne">Richtung Nordost</string>
    <string name="wdir_ene">Richtung Ost-Nordost</string>
    <string name="wdir_e">Richtung Ost</string>
    <string name="wdir_ese">Richtung Ost-Südost</string>
    <string name="wdir_se">Richtung Südost</string>
    <string name="wdir_sse">Richtung Süd-Südost</string>
    <string name="wdir_s">Richtung Süd</string>
    <string name="wdir_ssw">Richtung Süd-Südwest</string>
    <string name="wdir_sw">Richtung Südwest</string>
    <string name="wdir_wsw">Richtung West-Südwest</string>
    <string name="wdir_w">Richtung West</string>
    <string name="wdir_wnw">Richtung West-Nordwest</string>
    <string name="wdir_nw">Richtung Nordwest</string>
    <string name="wdir_nnw">Richtung Nord-Nordwest</string>
    -->
    <string name="forecast_title">"+++ SnowCast-Liveticker%1$s +++\n"</string>
    <string name="last_update">" (%1$s Uhr)"</string>
    <string name="no_data_available">Keine Wetterdaten über zu erwartenden Schneefall verfügbar.</string>
    <string name="no_snow_expected">kaum nennenswerter Schneefall</string>
    <string name="tap_to_update">"\nZum Abrufen aktueller Wetterdaten bitte antippen!"</string>
</resources>
