<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_idx1"
        android:inputType="textCapWords"
        android:key="idx1"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_idx1" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_idx2"
        android:inputType="textCapWords"
        android:key="idx2"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_idx2" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_idx3"
        android:inputType="textCapWords"
        android:key="idx3"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_idx3" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_idx4"
        android:inputType="textCapWords"
        android:key="idx4"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_idx4" />

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_idx5"
        android:inputType="textCapWords"
        android:key="idx5"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_idx5" />

</PreferenceScreen>
